# FinTrack-v1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  fly.toml
backend/: CMakeLists.txt
backend/src/: main.cpp
frontend/: Dockerfile  fly.toml  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
public/: app.js  index.html  styles.css
src/: main.cpp
